# build_with_Arm64

./: .env  Cargo.toml  ReadMe.text
.cargo/: config.toml
src/: function_files.rs  function_play_and_stop.rs  function_playlist.rs  function_status.rs  function_ticker.rs  functions.rs  html_struct.rs  json_struct.rs  main.rs  render.rs  render_function.rs
static/css/: bottom.css  controller.css  create_page.css  drag_and_drop.css  main.css  nomalize.css  ticker_page.css
static/js/: main.js
templates/: alert_test.html  create.html  drag_and_drop.html  edit.html  m_login.html  m_main.html  main.html  test.html  test2.html  testtest.html
