[package]
name = "arm_web_server"
version = "0.1.0"
authors = ["tonyl <tonylee3737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json","multipart"] }
json = "0.12"
dotenv ="0.15.0"
url = "2.2.2"
actix-web = "3.3.2"
tera = "1.5.0"
serde = "1.0"
config = "0.10.1"
awmp = { version = "0.6", default-features = true }
actix-files = "0.5.0"
actix-identity = "0.3.1"
pwhash = "1"
log = "0.4.0"
log4rs = "1.0.0"
